Updated sample config

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -4,7 +4,7 @@
   Boss = Virtual1
   ScrollLock >> Boss
 
-# define and additional modifier "Ext" (the angular bracket key on a german keyboard)
+# define an additional modifier "Ext" (the angular bracket key on a german keyboard)
   Ext = IntlBackslash
 
 # define some more aliases
@@ -26,7 +26,13 @@
   !Boss Ext{A}              >> AltLeft
   !Boss Ext{D}              >> ShiftLeft
   !Boss Ext{F}              >> ControlLeft
-
+  
+# Ext-W and the navigation keys should step in/out/over during debugging
+  !Boss Ext{W{L}}            >> debug_step_into
+  !Boss Ext{W{J}}            >> debug_step_out  
+  !Boss Ext{W{K}}            >> debug_step_over
+  !Boss Ext{W{Any}}          >>
+  
 # map Ext-I/J/K/L to cursor keys...
   !Boss Ext{I}              >> ArrowUp
   !Boss Ext{K}              >> ArrowDown
@@ -71,12 +77,6 @@
   !Boss Ext{0}              >> F10
   !Boss Ext{Minus}          >> F11
   !Boss Ext{Equal}          >> F12
-
-# Ext-W and the navigation keys should step in/out/over during debugging
-  !Boss Ext{W{L}}            >> debug_step_into
-  !Boss Ext{W{J}}            >> debug_step_out
-  !Boss Ext{W{K}}            >> debug_step_over
-  !Boss Ext{W{Any}}          >>
 
 # the Ext modifier together with other keys should have no effect
   !Boss Ext{Any}             >>
