Simplified context block configuration

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -88,8 +88,8 @@
   !Boss (Win ShiftLeft){Tab} >> prev_tab
   !Boss Win{C}               >> open_console
 
-# pass Windows-P unmapped (for Windows output configuration)
-  !Boss Win{P}               >> P
+# pass other Windows key combinations unmapped
+  !Boss Win{Any}            >> Any
 
 # colemak layout mapping (on german layout)
   !Boss AltGr{I}            >> !AltGr{BracketLeft} # ü
@@ -163,49 +163,49 @@
   edit_rename               >> F2
 
 # application specific mappings for abstract commands
-[Window system="Linux" title="File Manager"]
+[system="Linux" title="File Manager"]
   cursor_home       >> Backspace
   cursor_end        >> Enter
   open_console      >> !Win (ShiftLeft ControlLeft){C}
 
-[Window system="Linux" class="tilix"]
+[system="Linux" class="tilix"]
   close_window      >> !Win (Shift Control){W}
   edit_paste        >> (Shift Control){V}
   open_console      >> !Win (Control Alt){A}
 
-[Window title="Mozilla Firefox"]
+[title="Mozilla Firefox"]
   open_file         >> Control{K}
   navigate_escape   >> Escape Control{F} Escape
   go_to_definition  >> Shift{Backslash}
 
-[Window title="Chromium"]
+[title="Chromium"]
   open_file         >> Control{L}
   navigate_escape   >> Control{L} F6
 
-[Window title="Qt Creator"]
+[title="Qt Creator"]
   open_file         >> Control{K}
   go_to_definition  >> F2
   edit_redo         >> (Control Shift){Y}
   edit_rename       >> (Control Shift){R}
 
-[Window title="Visual Studio"]
+[title="Visual Studio"]
   go_to_definition  >> F12
   navigate_back     >> Control{Slash}
   navigate_fore     >> (Control Shift){Slash}
   build             >> (Control Shift){B}
 
-[Window system="Linux" title="Code - OSS"]
+[system="Linux" title="Code - OSS"]
   go_to_definition  >> F12
   navigate_back     >> (Control Alt){Slash}
   navigate_fore     >> (Control Shift){Slash}
   build             >> (Control Shift){B}
 
-[Window title="Visual Studio Code"]
+[title="Visual Studio Code"]
   go_to_definition  >> F12
   navigate_back     >> Alt{ArrowLeft}
   navigate_fore     >> Alt{ArrowRight}
   build             >> (Control Shift){B}
 
-[Window title="Geany"]
+[title="Geany"]
   go_to_definition  >> (Control Shift){T}
 
