Updated example configuration

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -12,9 +12,6 @@
   AltGr = AltRight
   Win   = Meta
 
-# pass the Windows key immediately
-  Win >> Win
-
 # map Capslock to Backspace
   Control{CapsLock} >> CapsLock
   CapsLock          >> Backspace
@@ -22,8 +19,9 @@
 # the Ext modifier alone should have no effect
   !Boss Ext >>
 
-# map Ext-A/D/F to Alt/Shift/Control
-  !Boss Ext{A}              >> AltLeft
+# map Ext-S/D/F to Alt/Shift/Control
+  !Boss Ext{A}              >> AltLeft # also map A because of S/D rollover
+  !Boss Ext{S}              >> AltLeft
   !Boss Ext{D}              >> ShiftLeft
   !Boss Ext{F}              >> ControlLeft
   
@@ -81,21 +79,24 @@
 # the Ext modifier together with other keys should have no effect
   !Boss Ext{Any}             >>
 
-# add some Windows key commands
+# add some Windows-key commands
+  !Boss Win{C}               >> open_terminal
   !Boss Win{Q}               >> close_window
   !Boss Win{A}               >> lower_window
   !Boss Win{Tab}             >> next_tab
   !Boss (Win ShiftLeft){Tab} >> prev_tab
-  !Boss Win{C}               >> open_console
+  (Win Control Alt){S}       >> suspend_machine
+  (Win Control Alt){P}       >> poweroff_machine
+  (Win Control Alt){R}       >> reboot_machine  
 
 # pass other Windows key combinations unmapped
   !Boss Win{Any}            >> Any
 
 # colemak layout mapping (on german layout)
-  !Boss AltGr{I}            >> !AltGr{BracketLeft} # ü
-  !Boss AltGr{A}            >> !AltGr{Quote}       # ä
-  !Boss AltGr{Semicolon}    >> !AltGr{Semicolon}   # ö
-  !Boss AltGr{D}            >> !AltGr{Minus}       # ß
+  !Boss AltGr{I}            >> !AltGr BracketLeft # ü
+  !Boss AltGr{A}            >> !AltGr Quote       # ä
+  !Boss AltGr{Semicolon}    >> !AltGr Semicolon   # ö
+  !Boss AltGr{D}            >> !AltGr Minus       # ß
 
   !Boss E                   >> F
   !Boss R                   >> P
@@ -143,8 +144,11 @@
   !Boss Slash               >> Shift{7}
 
 # default mappings for abstract commands
+  open_terminal             >> Any
+  suspend_machine           >> Any
+  poweroff_machine          >> Any
+  reboot_machine            >> Any
   close_window              >> !Win Alt{F4}
-  lower_window              >> !Win (Alt Shift){PageDown}
   navigate_escape           >> Escape
   cursor_home               >> !Control Home
   cursor_end                >> !Control End
@@ -156,22 +160,34 @@
   edit_paste                >> Control{V}
   edit_redo                 >> !Shift Control{Z}
   build                     >> Control{B}
-  open_console              >> Win{C}
   debug_step_over           >> F10
   debug_step_into           >> F11
   debug_step_out            >> Shift{F11}
   edit_rename               >> F2
 
-# application specific mappings for abstract commands
-[system="Linux" title="File Manager"]
-  cursor_home       >> Backspace
-  cursor_end        >> Enter
-  open_console      >> !Win (ShiftLeft ControlLeft){C}
+# system/application specific mappings for abstract commands
+[system="Linux"]
+  lower_window       >> !Win (Alt Shift){PageDown}
+
+[system="Linux" class="Thunar"]
+  cursor_home        >> Backspace
+  cursor_end         >> Enter
+  open_terminal      >> !Win (ShiftLeft ControlLeft){C}
 
 [system="Linux" class="tilix"]
-  close_window      >> !Win (Shift Control){W}
-  edit_paste        >> (Shift Control){V}
-  open_console      >> !Win (Control Alt){A}
+  close_window       >> !Win (Shift Control){W}
+  edit_paste         >> (Shift Control){V}
+  open_terminal      >> !Win ContextMenu ^ Enter
+
+[system="Windows"]
+  suspend_machine    >> !Control !Alt Win{X} ^ R E
+  poweroff_machine   >> !Control !Alt Win{X} ^ R R
+  reboot_machine     >> !Control !Alt Win{X} ^ R N
+  lower_window       >> !Win Alt{Escape}
+  open_terminal      >> Win{R} ^ C M D Enter
+
+[system="Windows" class="CabinetWClass"] # Windows Explorer
+  open_terminal      >> F4 ^ Control{A} C M D Enter
 
 [title="Mozilla Firefox"]
   open_file         >> Control{K}
@@ -194,18 +210,11 @@
   navigate_fore     >> (Control Shift){Slash}
   build             >> (Control Shift){B}
 
-[system="Linux" title="Code - OSS"]
+[title=/Code - OSS|Visual Studio Code/]
   go_to_definition  >> F12
   navigate_back     >> (Control Alt){Slash}
   navigate_fore     >> (Control Shift){Slash}
   build             >> (Control Shift){B}
 
-[title="Visual Studio Code"]
-  go_to_definition  >> F12
-  navigate_back     >> Alt{ArrowLeft}
-  navigate_fore     >> Alt{ArrowRight}
-  build             >> (Control Shift){B}
-
 [title="Geany"]
   go_to_definition  >> (Control Shift){T}
-
