Removed implicitly mapping of modifier keys

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -4,13 +4,18 @@
   Boss = Virtual1
   ScrollLock >> Boss
 
-# define an additional modifier "Ext" (the angular bracket key on a german keyboard)
+# define an additional modifier "Ext" (angular bracket key on some keyboards)
   Ext = IntlBackslash
 
 # define some more aliases
   Alt   = AltLeft
   AltGr = AltRight
   Win   = Meta
+
+# immediately forward common modifier keys (also used as mouse modifiers)
+  Shift   >> Shift
+  Control >> Control
+  Alt     >> Alt
 
 # map Capslock to Backspace
   Control{CapsLock} >> CapsLock
@@ -20,10 +25,10 @@
   !Boss Ext >>
 
 # map Ext-S/D/F to Alt/Shift/Control
-  !Boss Ext{A}              >> AltLeft # also map A because of S/D rollover
   !Boss Ext{S}              >> AltLeft
   !Boss Ext{D}              >> ShiftLeft
   !Boss Ext{F}              >> ControlLeft
+  !Boss Ext{A}              >> AltLeft   # also map A because of S/D rollover
   
 # Ext-W and the navigation keys should step in/out/over during debugging
   !Boss Ext{W{L}}            >> debug_step_into
@@ -120,7 +125,7 @@
 
   !Boss Shift{Quote}        >> Shift{2}
   !Boss Quote               >> Shift{Backslash}
-  !Boss Shift{Period}       >> IntlBackslash
+  !Boss Shift{Period}       >> Shift{IntlBackslash}
   !Boss Shift{Comma}        >> !Shift IntlBackslash
   !Boss Shift{BracketLeft}  >> !Shift AltGr{7}
   !Boss BracketLeft         >> AltGr{8}
@@ -131,16 +136,16 @@
   !Boss Shift{2}            >> !Shift AltGr{Q}
   !Boss Shift{3}            >> !Shift Backslash
   !Boss Shift{6}            >> !Shift Backquote Space
-  !Boss Shift{7}            >> 6
+  !Boss Shift{7}            >> Shift{6}
   !Boss Shift{8}            >> BracketRight
-  !Boss Shift{9}            >> 8
-  !Boss Shift{0}            >> 9
+  !Boss Shift{9}            >> Shift{8}
+  !Boss Shift{0}            >> Shift{9}
   !Boss Minus               >> Slash
   !Boss Shift{Equal}        >> !Shift BracketRight
   !Boss Equal               >> Shift{0}
   !Boss Shift{Backslash}    >> !Shift AltGr{IntlBackslash}
   !Boss Backslash           >> AltGr{Minus}
-  !Boss Shift{Slash}        >> Minus
+  !Boss Shift{Slash}        >> Shift{Minus}
   !Boss Slash               >> Shift{7}
 
 # default mappings for abstract commands
@@ -204,15 +209,15 @@
   edit_redo         >> (Control Shift){Y}
   edit_rename       >> (Control Shift){R}
 
-[title="Visual Studio"]
-  go_to_definition  >> F12
-  navigate_back     >> Control{Slash}
-  navigate_fore     >> (Control Shift){Slash}
-  build             >> (Control Shift){B}
-
 [title=/Code - OSS|Visual Studio Code/]
   go_to_definition  >> F12
   navigate_back     >> (Control Alt){Slash}
+  navigate_fore     >> (Control Shift){Slash}
+  build             >> (Control Shift){B}
+
+[title="Visual Studio"]
+  go_to_definition  >> F12
+  navigate_back     >> Control{Slash}
   navigate_fore     >> (Control Shift){Slash}
   build             >> (Control Shift){B}
 
