Allow to define common modifiers for context blocks

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -1,225 +1,227 @@
 
-# define a virtual "boss" key, which can be toggled using the scroll-lock key
-# when the boss key is "pressed", the keyboard should be intuitively useable
-  Boss = Virtual1
-  ScrollLock >> Boss
-
-# define an additional modifier "Ext" (angular bracket key on some keyboards)
-  Ext = IntlBackslash
-
-# define some more aliases
-  Alt   = AltLeft
-  AltGr = AltRight
-  Win   = Meta
+# define some aliases
+Alt   = AltLeft
+AltGr = AltRight
+Win   = Meta
 
 # immediately forward common modifier keys (also used as mouse modifiers)
-  Shift   >> Shift
-  Control >> Control
-  Alt     >> Alt
+Shift   >> Shift
+Control >> Control
+Alt     >> Alt
 
-# map Capslock to Backspace
+# define a virtual "boss" key, which can be toggled using the scroll-lock key
+# when the boss key is "pressed", the keyboard should be intuitively useable
+Boss = Virtual1
+ScrollLock >> Boss
+
+# add mappings in context which is active when boss key is not pressed
+[modifier="!Boss"]
+  # map Capslock to Backspace
   Control{CapsLock} >> CapsLock
   CapsLock          >> Backspace
 
-# the Ext modifier alone should have no effect
-  !Boss Ext >>
+  # define an additional modifier "Ext" (angular bracket key on some keyboards)
+  Ext = IntlBackslash
 
-# map Ext-S/D/F to Alt/Shift/Control
-  !Boss Ext{S}              >> AltLeft
-  !Boss Ext{D}              >> ShiftLeft
-  !Boss Ext{F}              >> ControlLeft
-  !Boss Ext{A}              >> AltLeft   # also map A because of S/D rollover
-  
-# Ext-W and the navigation keys should step in/out/over during debugging
-  !Boss Ext{W{L}}            >> debug_step_into
-  !Boss Ext{W{J}}            >> debug_step_out  
-  !Boss Ext{W{K}}            >> debug_step_over
-  !Boss Ext{W{Any}}          >>
-  
-# map Ext-I/J/K/L to cursor keys...
-  !Boss Ext{I}              >> ArrowUp
-  !Boss Ext{K}              >> ArrowDown
-  !Boss Ext{J}              >> ArrowLeft
-  !Boss Ext{L}              >> ArrowRight
-  !Boss Ext{U}              >> cursor_home
-  !Boss Ext{O}              >> cursor_end
-  !Boss Ext{Y}              >> PageUp
-  !Boss Ext{H}              >> PageDown
+  # the Ext modifier alone should have no effect
+  Ext >>
 
-  !Boss Ext{Semicolon}      >> Backspace
-  !Boss Ext{Q}              >> navigate_escape
-  !Boss Ext{Space}          >> Space
-  !Boss Ext{M}              >> Enter
+  # map Ext-S/D/F to Alt/Shift/Control
+  Ext{S}               >> AltLeft
+  Ext{D}               >> Shift
+  Ext{F}               >> Control
+  Ext{A}               >> AltLeft   # also map A because of S/D rollover
 
-  !Boss Ext{X}              >> Control{X}
-  !Boss Ext{C}              >> Control{C}
-  !Boss Ext{V}              >> edit_paste
-  !Boss Ext{E}              >> Control{F}
-  !Boss (Ext Shift){Z}      >> edit_redo
-  !Boss Ext{Z}              >> Control{Y}
+  # Ext-W and the navigation keys should step in/out/over during debugging
+  Ext{W{L}}            >> debug_step_into
+  Ext{W{J}}            >> debug_step_out
+  Ext{W{K}}            >> debug_step_over
+  Ext{W{Any}}          >>
 
-  !Boss Ext{Comma}          >> navigate_back
-  !Boss Ext{Period}         >> navigate_fore
-  !Boss Ext{T}              >> open_file
-  !Boss Ext{G}              >> go_to_definition
-  !Boss Ext{BracketRight}   >> AudioVolumeUp
-  !Boss Ext{BracketLeft}    >> AudioVolumeDown
-  !Boss Ext{R}              >> Delete
-  !Boss Ext{B}              >> build
+  # map Ext-I/J/K/L to cursor keys...
+  Ext{I}               >> ArrowUp
+  Ext{K}               >> ArrowDown
+  Ext{J}               >> ArrowLeft
+  Ext{L}               >> ArrowRight
+  Ext{U}               >> cursor_home
+  Ext{O}               >> cursor_end
+  Ext{Y}               >> PageUp
+  Ext{H}               >> PageDown
 
-# map Ext-number keys to function keys
-  !Boss Ext{1}              >> F1
-  !Boss Ext{2}              >> edit_rename
-  !Boss Ext{3}              >> F3
-  !Boss Ext{4}              >> F4
-  !Boss Ext{5}              >> F5
-  !Boss Ext{6}              >> F6
-  !Boss Ext{7}              >> F7
-  !Boss Ext{8}              >> F8
-  !Boss Ext{9}              >> F9
-  !Boss Ext{0}              >> F10
-  !Boss Ext{Minus}          >> F11
-  !Boss Ext{Equal}          >> F12
+  Ext{Semicolon}       >> Backspace
+  Ext{Q}               >> navigate_escape
+  Ext{Space}           >> Space
+  Ext{M}               >> Enter
 
-# the Ext modifier together with other keys should have no effect
-  !Boss Ext{Any}             >>
+  Ext{X}               >> Control{X}
+  Ext{C}               >> Control{C}
+  Ext{V}               >> edit_paste
+  Ext{E}               >> Control{F}
+  (Ext Shift){Z}       >> edit_redo
+  Ext{Z}               >> Control{Y}
 
-# add some Windows-key commands
-  !Boss Win{C}               >> open_terminal
-  !Boss Win{Q}               >> close_window
-  !Boss Win{A}               >> lower_window
-  !Boss Win{Tab}             >> next_tab
-  !Boss (Win ShiftLeft){Tab} >> prev_tab
-  (Win Control Alt){S}       >> suspend_machine
-  (Win Control Alt){P}       >> poweroff_machine
-  (Win Control Alt){R}       >> reboot_machine  
+  Ext{Comma}           >> navigate_back
+  Ext{Period}          >> navigate_fore
+  Ext{T}               >> open_file
+  Ext{G}               >> go_to_definition
+  Ext{BracketRight}    >> AudioVolumeUp
+  Ext{BracketLeft}     >> AudioVolumeDown
+  Ext{R}               >> Delete
+  Ext{B}               >> build
 
-# pass other Windows key combinations unmapped
-  !Boss Win{Any}            >> Any
+  # map Ext-number keys to function keys
+  Ext{1}               >> F1
+  Ext{2}               >> edit_rename
+  Ext{3}               >> F3
+  Ext{4}               >> F4
+  Ext{5}               >> F5
+  Ext{6}               >> F6
+  Ext{7}               >> F7
+  Ext{8}               >> F8
+  Ext{9}               >> F9
+  Ext{0}               >> F10
+  Ext{Minus}           >> F11
+  Ext{Equal}           >> F12
 
-# colemak layout mapping (on german layout)
-  !Boss AltGr{I}            >> !AltGr BracketLeft # ü
-  !Boss AltGr{A}            >> !AltGr Quote       # ä
-  !Boss AltGr{Semicolon}    >> !AltGr Semicolon   # ö
-  !Boss AltGr{D}            >> !AltGr Minus       # ß
+  # the Ext modifier together with other keys should have no effect
+  Ext{Any}             >>
 
-  !Boss E                   >> F
-  !Boss R                   >> P
-  !Boss T                   >> G
-  !Boss Y                   >> J
-  !Boss U                   >> L
-  !Boss I                   >> U
-  !Boss O                   >> Z
-  !Boss Z                   >> Y
-  !Boss Shift{P}            >> Period
-  !Boss P                   >> Shift{Comma}
-  !Boss S                   >> R
-  !Boss D                   >> S
-  !Boss F                   >> T
-  !Boss G                   >> D
-  !Boss J                   >> N
-  !Boss K                   >> E
-  !Boss L                   >> I
-  !Boss Semicolon           >> O
-  !Boss N                   >> K
+  # add some Windows-key commands
+  Win{C}               >> open_terminal
+  Win{Q}               >> close_window
+  Win{A}               >> lower_window
+  Win{Tab}             >> next_tab
+  (Win Shift){Tab}     >> prev_tab
+  (Win Control Alt){S} >> suspend_machine
+  (Win Control Alt){P} >> poweroff_machine
+  (Win Control Alt){R} >> reboot_machine
 
-  !Boss Shift{Quote}        >> Shift{2}
-  !Boss Quote               >> Shift{Backslash}
-  !Boss Shift{Period}       >> Shift{IntlBackslash}
-  !Boss Shift{Comma}        >> !Shift IntlBackslash
-  !Boss Shift{BracketLeft}  >> !Shift AltGr{7}
-  !Boss BracketLeft         >> AltGr{8}
-  !Boss Shift{BracketRight} >> !Shift AltGr{0}
-  !Boss BracketRight        >> AltGr{9}
-  !Boss Shift{Backquote}    >> Equal
-  !Boss Backquote           >> AltGr{BracketRight}
-  !Boss Shift{2}            >> !Shift AltGr{Q}
-  !Boss Shift{3}            >> !Shift Backslash
-  !Boss Shift{6}            >> !Shift Backquote Space
-  !Boss Shift{7}            >> Shift{6}
-  !Boss Shift{8}            >> BracketRight
-  !Boss Shift{9}            >> Shift{8}
-  !Boss Shift{0}            >> Shift{9}
-  !Boss Minus               >> Slash
-  !Boss Shift{Equal}        >> !Shift BracketRight
-  !Boss Equal               >> Shift{0}
-  !Boss Shift{Backslash}    >> !Shift AltGr{IntlBackslash}
-  !Boss Backslash           >> AltGr{Minus}
-  !Boss Shift{Slash}        >> Shift{Minus}
-  !Boss Slash               >> Shift{7}
+  # pass other Windows key combinations unmapped
+  Win{Any}             >> Any
 
-# default mappings for abstract commands
-  open_terminal             >> Any
-  suspend_machine           >> Any
-  poweroff_machine          >> Any
-  reboot_machine            >> Any
-  close_window              >> !Win Alt{F4}
-  navigate_escape           >> Escape
-  cursor_home               >> !Control Home
-  cursor_end                >> !Control End
-  open_file                 >> Control{O}
-  navigate_back             >> Alt{ArrowLeft}
-  navigate_fore             >> Alt{ArrowRight}
-  next_tab                  >> !Win Control{PageUp}
-  prev_tab                  >> !Win Control{PageDown}
-  edit_paste                >> Control{V}
-  edit_redo                 >> !Shift Control{Z}
-  build                     >> Control{B}
-  debug_step_over           >> F10
-  debug_step_into           >> F11
-  debug_step_out            >> Shift{F11}
-  edit_rename               >> F2
+  # colemak layout mapping (on german layout)
+  AltGr{I}             >> !AltGr BracketLeft # ü
+  AltGr{A}             >> !AltGr Quote       # ä
+  AltGr{Semicolon}     >> !AltGr Semicolon   # ö
+  AltGr{D}             >> !AltGr Minus       # ß
+
+  E                    >> F
+  R                    >> P
+  T                    >> G
+  Y                    >> J
+  U                    >> L
+  I                    >> U
+  O                    >> Z
+  Z                    >> Y
+  Shift{P}             >> Period
+  P                    >> Shift{Comma}
+  S                    >> R
+  D                    >> S
+  F                    >> T
+  G                    >> D
+  J                    >> N
+  K                    >> E
+  L                    >> I
+  Semicolon            >> O
+  N                    >> K
+
+  Shift{Quote}         >> Shift{2}
+  Quote                >> Shift{Backslash}
+  Shift{Period}        >> Shift{IntlBackslash}
+  Shift{Comma}         >> !Shift IntlBackslash
+  Shift{BracketLeft}   >> !Shift AltGr{7}
+  BracketLeft          >> AltGr{8}
+  Shift{BracketRight}  >> !Shift AltGr{0}
+  BracketRight         >> AltGr{9}
+  Shift{Backquote}     >> Equal
+  Backquote            >> AltGr{BracketRight}
+  Shift{2}             >> !Shift AltGr{Q}
+  Shift{3}             >> !Shift Backslash
+  Shift{6}             >> !Shift Backquote Space
+  Shift{7}             >> Shift{6}
+  Shift{8}             >> BracketRight
+  Shift{9}             >> Shift{8}
+  Shift{0}             >> Shift{9}
+  Minus                >> Slash
+  Shift{Equal}         >> !Shift BracketRight
+  Equal                >> Shift{0}
+  Shift{Backslash}     >> !Shift AltGr{IntlBackslash}
+  Backslash            >> AltGr{Minus}
+  Shift{Slash}         >> Shift{Minus}
+  Slash                >> Shift{7}
+
+  # default mappings for abstract commands
+  open_terminal        >> Any
+  suspend_machine      >> Any
+  poweroff_machine     >> Any
+  reboot_machine       >> Any
+  close_window         >> !Win Alt{F4}
+  navigate_escape      >> Escape
+  cursor_home          >> !Control Home
+  cursor_end           >> !Control End
+  open_file            >> Control{O}
+  navigate_back        >> Alt{ArrowLeft}
+  navigate_fore        >> Alt{ArrowRight}
+  next_tab             >> !Win Control{PageUp}
+  prev_tab             >> !Win Control{PageDown}
+  edit_paste           >> Control{V}
+  edit_redo            >> !Shift Control{Z}
+  build                >> Control{B}
+  debug_step_over      >> F10
+  debug_step_into      >> F11
+  debug_step_out       >> Shift{F11}
+  edit_rename          >> F2
 
 # system/application specific mappings for abstract commands
 [system="Linux"]
-  lower_window       >> !Win (Alt Shift){PageDown}
+  lower_window         >> !Win (Alt Shift){PageDown}
 
 [system="Linux" class="Thunar"]
-  cursor_home        >> Backspace
-  cursor_end         >> Enter
-  open_terminal      >> !Win (ShiftLeft ControlLeft){C}
+  cursor_home          >> Backspace
+  cursor_end           >> Enter
+  open_terminal        >> !Win (Shift Control){C}
 
 [system="Linux" class="tilix"]
-  close_window       >> !Win (Shift Control){W}
-  edit_paste         >> (Shift Control){V}
-  open_terminal      >> !Win ContextMenu ^ Enter
+  close_window         >> !Win (Shift Control){W}
+  edit_paste           >> (Shift Control){V}
+  open_terminal        >> !Win ContextMenu ^ Enter
 
 [system="Windows"]
-  suspend_machine    >> !Control !Alt Win{X} ^ R E
-  poweroff_machine   >> !Control !Alt Win{X} ^ R R
-  reboot_machine     >> !Control !Alt Win{X} ^ R N
-  lower_window       >> !Win Alt{Escape}
-  open_terminal      >> Win{R} ^ C M D Enter
+  suspend_machine      >> !Control !Alt Win{X} ^ R E
+  poweroff_machine     >> !Control !Alt Win{X} ^ R R
+  reboot_machine       >> !Control !Alt Win{X} ^ R N
+  lower_window         >> !Win Alt{Escape}
+  open_terminal        >> Win{R} ^ C M D Enter
 
 [system="Windows" class="CabinetWClass"] # Windows Explorer
-  open_terminal      >> F4 ^ Control{A} C M D Enter
+  open_terminal        >> F4 ^ Control{A} C M D Enter
 
 [title="Mozilla Firefox"]
-  open_file         >> Control{K}
-  navigate_escape   >> Escape Control{F} Escape
-  go_to_definition  >> Shift{Backslash}
+  open_file            >> Control{K}
+  navigate_escape      >> Escape Control{F} Escape
+  go_to_definition     >> Shift{Backslash}
 
 [title="Chromium"]
-  open_file         >> Control{L}
-  navigate_escape   >> Control{L} F6
+  open_file            >> Control{L}
+  navigate_escape      >> Control{L} F6
 
 [title="Qt Creator"]
-  open_file         >> Control{K}
-  go_to_definition  >> F2
-  edit_redo         >> (Control Shift){Y}
-  edit_rename       >> (Control Shift){R}
+  open_file            >> Control{K}
+  go_to_definition     >> F2
+  edit_redo            >> (Control Shift){Y}
+  edit_rename          >> (Control Shift){R}
 
 [title=/Code - OSS|Visual Studio Code/]
-  go_to_definition  >> F12
-  navigate_back     >> (Control Alt){Slash}
-  navigate_fore     >> (Control Shift){Slash}
-  build             >> (Control Shift){B}
+  go_to_definition     >> F12
+  navigate_back        >> (Control Alt){Slash}
+  navigate_fore        >> (Control Shift){Slash}
+  build                >> (Control Shift){B}
 
 [title="Visual Studio"]
-  go_to_definition  >> F12
-  navigate_back     >> Control{Slash}
-  navigate_fore     >> (Control Shift){Slash}
-  build             >> (Control Shift){B}
+  go_to_definition     >> F12
+  navigate_back        >> Control{Slash}
+  navigate_fore        >> (Control Shift){Slash}
+  build                >> (Control Shift){B}
 
 [title="Geany"]
-  go_to_definition  >> (Control Shift){T}
+  go_to_definition     >> (Control Shift){T}
