--- a/keymapper.conf
+++ b/keymapper.conf
@@ -100,10 +100,11 @@ ScrollLock >> Boss
   Win{Any}             >> Any
 
   # colemak layout mapping (on german layout)
-  AltGr{I}             >> !AltGr BracketLeft # ü
-  AltGr{A}             >> !AltGr Quote       # ä
-  AltGr{Semicolon}     >> !AltGr Semicolon   # ö
-  AltGr{D}             >> !AltGr Minus       # ß
+  AltGr{I}             >> !AltGr BracketLeft      # ü
+  AltGr{A}             >> !AltGr Quote            # ä
+  AltGr{Semicolon}     >> !AltGr Semicolon        # ö
+  AltGr{D}             >> !AltGr Minus            # ß
+  AltGr{Backquote}     >> !AltGr Shift{Backquote} # °
 
   E                    >> F
   R                    >> P
@@ -133,7 +134,7 @@ ScrollLock >> Boss
   BracketLeft          >> AltGr{8}
   Shift{BracketRight}  >> !Shift AltGr{0}
   BracketRight         >> AltGr{9}
-  Shift{Backquote}     >> Equal
+  Shift{Backquote}     >> Equal Space
   Backquote            >> AltGr{BracketRight}
   Shift{2}             >> !Shift AltGr{Q}
   Shift{3}             >> !Shift Backslash
