--- a/src/win32/resource.rc.in
+++ b/src/win32/resource.rc.in
@@ -4,11 +4,11 @@
 #define VER_COMPANYNAME_STR         "https://github.com/houmain/keymapper"
 #define VER_LEGALCOPYRIGHT_STR      "(c) 2019-2022 by Albert Kalchmair"
 
-#define VER_FILEVERSION             ${GIT_COMMIT_FILEVERSION},0
-#define VER_FILEVERSION_STR         "${GIT_COMMIT_LAST_TAG}\0"
+#define VER_FILEVERSION             ${FILE_VERSION},0
+#define VER_FILEVERSION_STR         "${VERSION}\0"
 
-#define VER_PRODUCTVERSION          ${GIT_COMMIT_FILEVERSION},0
-#define VER_PRODUCTVERSION_STR      "${GIT_COMMIT_LAST_TAG}\0"
+#define VER_PRODUCTVERSION          ${FILE_VERSION},0
+#define VER_PRODUCTVERSION_STR      "${VERSION}\0"
 
 1 VERSIONINFO
 FILEVERSION VER_FILEVERSION
