Installing .desktop and .service files on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,8 @@ endif()
 if(NOT WIN32)
   install(TARGETS keymapper DESTINATION "bin")
   install(TARGETS keymapperd DESTINATION "bin")
+  install(DIRECTORY extra/share DESTINATION .)
+  install(DIRECTORY extra/lib DESTINATION .)
 else()
   install(TARGETS keymapper DESTINATION .)
 endif()
