--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Setup Linux/gcc-8
       if: runner.os == 'Linux'
       run: |
-        sudo apt-get install libudev-dev libusb-1.0-0-dev libx11-dev
+        sudo apt-get install libudev-dev libusb-1.0-0-dev libx11-dev libdbus-1-dev libwayland-dev
         sudo apt-get install g++-8
         echo 'CC=gcc-8' >> $GITHUB_ENV
         echo 'CXX=g++-8' >> $GITHUB_ENV
